fixed the mobile dark mode sun/moon bug

--- a/main.css
+++ b/main.css
@@ -103,7 +103,7 @@ header{
 .bar{
     width: 40px;/*was formally 50px*/ /*possible? 60px*/
     height: 5px;/*was formally 8px*/ /*possible? 10px*/
-    background-color: #ffffff;
+    background-color: var(--bar-color);
     border-radius: 10px;
 
     margin-bottom: 7px;
@@ -189,7 +189,7 @@ header{
 .fullscreen{
     background-color: var(--bg-color);
     position: absolute;
-    top: 0;
+    top: 7px;
     bottom: 0;
     width: 100%;
     height: 100%;
@@ -656,6 +656,7 @@ a:active{
     
     --header-border-bottom-color: #C9B79C;/*#71816D;/*var(--header-bg-color);/*#FF9966;/*#F5F5DC;/*#FFFFF0;/*#E6E6FA;*/
     --button-color: linear-gradient(to left, #d3d3d3, #ffffff);
+    --bar-color: #000;
 }
 [data-theme="dark"]{
     --bg-color: #004f6d;
@@ -665,7 +666,7 @@ a:active{
     --text-sec-color: #c7cdcf;
     --navigator-bg-color: #FF9966;
 
-    --navtitle-color: rgb(51, 143, 159);
+    --navtitle-color: #fff;/*rgb(51, 143, 159);*/
     --link-color: #ffffff;
     --link-color-hover: #ffffff;
     --header-link-color: #ffffff;
@@ -673,6 +674,7 @@ a:active{
 
     --header-border-bottom-color: rgb(196, 188, 188);
     --button-color: linear-gradient(to right, var(--bg-color),#09405c );
+    --bar-color: #ffffff;
 }
 /* :root {
     --bg-light: #ffffff;
